--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,10 @@
     package="com.hackkrk.guessgame"
     android:versionCode="1"
     android:versionName="1.0" >
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-feature android:name="android.hardware.camera" />
 
     <uses-sdk android:minSdkVersion="8" />
 
@@ -19,7 +22,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="RiddlesActivity"></activity>
+        <activity android:name="RiddlesActivity" >
+        </activity>
+        <activity android:name="RiddleActivity" >
+        </activity>
+        <activity android:name="NewRiddleActivity" >
+        </activity>
     </application>
 
 </manifest>
