--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,8 @@
         </activity>
         <activity android:name="NewRiddleActivity" >
         </activity>
+        <activity android:name="LaderboardActivity" >
+        </activity>
     </application>
 
 </manifest>
